@startuml

abstract class MIPConvertor {
    +solver_status
    +solving_time

    +create_solver()
    +solve()
    +run_model()
    +get_model_state()
    +str()
    +print_all_model_variables()
}
solver o-- MIPConvertor

class ABCToMIPConvertor{
   +get_model_state()
   +define_<problem/constraint>()
}
MIPConvertor <|-- ABCToMIPConvertor
ScoreFunctions o-- ABCToMIPConvertor

abstract class DBDataExtractor{
    +extract_data_from_db()
    +convert_to_mip()
    +extract_and_convert()
}
ABCToMIPConvertor o-- DBDataExtractor
DBEngine o-- DBDataExtractor

class ABCSettingExtractor{
    +extract_data_from_db()
    +convert_to_mip()
}
DBDataExtractor <|-- ABCSettingExtractor

class DCExtractor{
    +extract_data_from_db()
    +convert_to_mip()
}
DBDataExtractor <|-- DCExtractor

class TGDExtractor{
    +extract_data_from_db()
    +convert_to_mip()
}
DBDataExtractor <|-- TGDExtractor

abstract class Experiment{
    +create_results_df()
    +save_results()
    +run_model()
    +run_experiment()
}
Experiment --* ABCToMIPConvertor
Experiment --* DBDataExtractor

class CombinedConstraintsExperiment{
    +create_results_df()
    +run_experiment()
    +experiment_runner()
}
Experiment <|-- CombinedConstraintsExperiment

@enduml